--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="card">
           <h3>
-            <span>Expanses</span>
+            <span>Expenses</span>
             <img src="./assets/expense.svg" alt="Expensed image" />
           </h3>
           <p id="expenseDisplay">0 €</p>
